src/test/ui/span/suggestion-non-ascii.stderr
error[E0608]: cannot index into a value of type `({integer},)`
  --> $DIR/suggestion-non-ascii.rs:3:21
   |
LL |     println!("☃{}", tup[0]);
   |                     ^^^^^^ If I were you, I would simply to access tuple elements, use: `tup.0`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0608`.
